# Test-of-VLA_JEPA_WAM

./: .gitignore  COMPREHENSIVE_REPORT.md  EVALUATION.md  EXPERIMENT_AUDIT_REPORT.md  EXPERIMENT_FRAMEWORK.md  FINAL_REPORT.md  README.md  README_CN.md  SECOND_EXPERIMENT_REPORT.md  example.py  pyproject.toml  requirements.txt
datasets/vla_jepa_libero130_v3/: README.md  manifest.json
datasets/vla_jepa_pretrain_libero40_v1/: README.md  collection_config.json
latent_world_model/: __init__.py  evaluation.py  model.py  predictor.py
latent_world_model/evaluation/: __init__.py  archive_manifest.py  audit_collection.py  audit_latent_action_recompute.py  audit_libero_replay.py  audit_model_protocol.py  audit_training_view_fusion.py  deep_analysis.py  index.py  merge.py  metrics.py  parity.py  report.py  runner.py
reports/: ARTIFACT_MANIFEST.json  README.md
reports/archive/: FIRST_EXPERIMENT_SUMMARY.md
scripts/: collect_pretrain_libero40.sh  start_pretrain_libero40_server.sh
tests/: test_model.py
