[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vjepa-latent-world-model"
version = "0.1.0"
description = "Standalone action-conditioned V-JEPA2 latent world model extracted from VLA-JEPA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "transformers>=4.57.0", "timm>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
